Implemented part of the session business and created a error message when you log in with login or password wrong.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ mensagem.remocao.sucesso=O registro foi removido com sucesso.
 mensagem.erro.titulo=ALGO DEU ERRADO!
 mensagem.atencao.titulo=ATENENÇÃO!
 mensagem.informacao.titulo=INFORMAÇÃO!
+mensagem.erro.logar=O login e a senha que você digitou não coincidem.
