Added authentication interceptor to prevent url access without login

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,9 @@ mensagem.sucesso.titulo=SUCESSO!
 mensagem.sucesso.descricao=O registro foi salvo com sucesso.
 mensagem.remocao.sucesso=O registro foi removido com sucesso.
 mensagem.erro.titulo=ALGO DEU ERRADO!
-mensagem.atencao.titulo=ATENENÇÃO!
+mensagem.atencao.titulo=ATENÇÃO!
 mensagem.informacao.titulo=INFORMAÇÃO!
 mensagem.erro.logar=O login e a senha que você digitou não coincidem.
+mensagem.timeout=Sua sessão expirou!
+mensagem.usuarioNaoLogado=Você deve realizar login para continuar!
+mensagem.logout=Você saiu do sistema.
